@@ -40,8 +40,8 @@ const char* BEEBEEP_LANGUAGE_WEBSITE = "/language.php";
 const char* BEEBEEP_CHECK_VERSION_WEBSITE = "/checkversion.php";
 const char* BEEBEEP_VERSION = "1.0.1b";
 const int BEEBEEP_PROTO_VERSION = 62;
-const int BEEBEEP_SETTINGS_VERSION = 3;
-const int BEEBEEP_BUILD = 414;
+const int BEEBEEP_SETTINGS_VERSION = 4;
+const int BEEBEEP_BUILD = 415;
 
 #endif // BEEBEEP_VERSION_H
 
