@@ -5,6 +5,7 @@ BeeBEEP 1.0.2
 - Display chat members in chat window and as selected users in user panel
 - Added "Max simultaneous downloads" option in beebeep.ini configuration file
 - Enabled multiple files and folder download from file sharing window
+- Added a text filter to quickly search user in list
 
 BeeBEEP 1.0.1
 - Fixed notification bug with "always on top" option active
